--- a/config/database.yml
+++ b/config/database.yml
@@ -15,20 +15,20 @@ development:
   database: CharacterCreator_development
   pool: 5
   username: root
-  password:
+  password: LindaBlueHeart
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: mysql2
   encoding: utf8
   reconnect: false
   database: CharacterCreator_test
   pool: 5
   username: root
-  password:
+  password: LindaBlueHeart
   host: localhost
 
 production:
@@ -40,3 +40,6 @@ production:
   username:
   password:
   host: localhost
+
+cucumber:
+  <<: *test
